// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBox > should match snapshot 1`] = `
<div
  className=""
>
  <Label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </Label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <Search
      className="leftAccessory searchIcon"
    />
    <Input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      spellCheck={true}
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`SearchBox > should match snapshot 2`] = `
<div
  className=""
>
  <Label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </Label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <div
      className="leftAccessory spinnerContainer"
    >
      <LoadingSpinner
        className="spinner"
        small={true}
      />
    </div>
    <Input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      spellCheck={true}
      type="search"
      value=""
    />
  </form>
</div>
`;

exports[`SearchBox > should match snapshot 3`] = `
<div
  className=""
>
  <Label
    className="sr-only"
    htmlFor="search-box"
  >
    Search
  </Label>
  <form
    className="searchWrapper"
    onSubmit={[Function]}
  >
    <Search
      className="leftAccessory searchIcon"
    />
    <Button
      aria-label="Clear search"
      className="removeInput"
      onClick={[Function]}
      size="icon"
      variant="ghost"
    >
      <X />
    </Button>
    <Input
      autoComplete="off"
      className="form-control form-control-lg"
      id="search-box"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Testing testing 123"
      spellCheck={true}
      type="search"
      value="Hello world"
    />
  </form>
</div>
`;
